# OrderMatchingEngine

./: Cargo.toml  README.md  index.html
OME/: Cargo.toml  index.html
OME/src/: helper.rs  main.rs  market.rs  order.rs  user.rs
api/: .gitignore  Cargo.toml  README.md  Rocket.toml
api/src/: main.rs
desktop/src/: main.js
server/: Cargo.toml  main.rs
src/: helper.rs  main.rs  market.rs  order.rs  user.rs
web/: Cargo.toml  index.html
