[package]
name = "order_matching_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
argparse = "0.2.2"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
rand = "0.8.5"
plotters = "0.3.5"
getrandom = { version = "0.2", features = ["js"] }
