[package]
name = "ome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
plotters = "0.3.5"
getrandom = { version = "0.2", features = ["js"] }
